# hotkey-wasm

./: .gitignore  Cargo.toml  README.md
pkg/: hotkey.d.ts  hotkey.js  hotkey_bg.wasm  hotkey_bg.wasm.d.ts
src/: lib.rs
