[package]
name = "hotkey"
version = "0.1.0"
authors = ["Ming Chang <mail@mingchang.tw>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo = "0.8.0"
wasm-bindgen = "0.2.82"
wee_alloc = "0.4.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.32"

[profile.release]
opt-level = "s"
lto = true

[dependencies.web-sys]
version = "0.3.59"
features = [
    'Document',
    'Element',
    "Event",
    'FocusEvent',
    'FocusEventInit',
    'HtmlElement',
    "KeyboardEvent",
    'Window'
]
